fix region name text overflow

--- a/src/styles/inherited-scss/components/info-panel/_info-panel.scss
+++ b/src/styles/inherited-scss/components/info-panel/_info-panel.scss
@@ -25,4 +25,20 @@
   grid-template-rows: auto auto;
   padding: 12px 20px;
   align-items: baseline;
+
+  @media screen and (max-width: 768px) {
+    grid-template-rows: 16px 16px;
+    padding: 12px 16px;
+    gap: 4px 8px;
+  }
+}
+
+.info-panel h3 {
+  @media screen and (max-width: 768px) {
+    line-height: initial;
+    white-space: nowrap;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
